--- a/css/sections/related.css
+++ b/css/sections/related.css
@@ -35,10 +35,15 @@
 }
 
 .social-link svg,
-.social-link img {
+.social-link img,
+.social-link i {
     width: 40px;
     height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     object-fit: contain;
+    font-size: 40px;
 }
 
 /* Hover effect: Swaps colors and adds a cinematic glow. */
